# scipostlayout

./: .gitignore  README.md  run_docker.sh
code/LayoutFormer++/: requirements.txt
code/LayoutFormer++/fid/: config.py  fid_model.py  run_fid.sh  train.py
code/LayoutFormer++/src/: main.py  run.completion.sh  run.gen_r.sh  run.gen_t.const_base.sh  run.gen_t.const_rule.sh  run.gen_t.sh  run.gen_ts.sh  run.refinement.sh  run.sh
code/LayoutPrompter/: requirements.txt  run.completion.sh  run.gen_p.sh  run.gen_r.sh  run.gen_t.gen_const_base.sh  run.gen_t.gen_const_rule.sh  run.gen_t.sh  run.gen_ts.sh  run.refinement.sh  run.sh
code/LayoutPrompter/notebooks/: constraint_explicit.ipynb
code/LayoutPrompter/src/: constraint_explicit.py  data_preprocess_publaynet.py  eval_layoutformer.py  eval_layoutprompter.py  fid.py  parsing.py  preprocess.py  ranker.py  (+5 more)
code/Paper-to-Layout/: extract_constraints_gent.py
code/layout-dm/: clustering.sh  eval.py  pyproject.toml  test.gen_t.gent_const_base.sh  test.gen_t.gent_const_rule.sh  test.sh  train.sh  train_fid.sh
code/layout-dm/eval_utils/: fid.py  utils.py
code/layout-dm/notebooks/: demo.ipynb  demo.py
code/layout-dm/src/trainer/trainer/: hydra_configs.py  test.py
code/layout-dm/src/trainer/trainer/config/dataset/: scipostlayout.yaml
code/layout-dm/src/trainer/trainer/data/: util.py
code/layout-dm/src/trainer/trainer/datasets/: __init__.py  scipostlayout.py
code/layout-dm/src/trainer/trainer/fid/: model.py  train.py
code/layout-dm/src/trainer/trainer/helpers/: scheduler.py  visualization.py
code/utils/: process_annotated_file.py  rearrange_json.py
(+33 files in other folders)
